--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "grunt": ">=0.4.5"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin yaml"
   ],
   "dependencies": {
     "js-yaml": "^3.5.3"
